Implement batch texture loading